chore: SonarQube, Tournament SFX, project-files,
- Fixed all SonarQube issues (Except TournamentView)
- README updates for consistency

Tournament:
- Created and implemented Pin.wav
- Select.wav for multiple buttons
- Mute toggle
- Moved back button

- Made folder for project files